manifests/model.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model1
  namespace: model
  labels:
    app: model
spec:
  replicas: 4
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
        version: model1
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/proxyCPU: "128m"
        sidecar.istio.io/proxyMemory: "128Mi"
        proxy.istio.io/config: "{'concurrency':'4'}"
    spec:
      containers:
        - name: model1
          image: kooose/ml-system-in-actions:model1_0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 500m
              memory: "300Mi"
            requests:
              cpu: 500m
              memory: "300Mi"
          volumeMounts:
            - name: workdir
              mountPath: /workdir
        - name: count-agent
          image: k8s.gcr.io/fluentd-gcp:1.30
          resources:
            limits:
              cpu: 128m
              memory: "300Mi"
            requests:
              cpu: 128m
              memory: "300Mi"
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: config-volume
              mountPath: /etc/fluentd-config
      volumes:
        - name: varlog
          emptyDir: {}
        - name: config-volume
          configMap:
            name: fluentd-config
        - name: workdir
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: model
  namespace: model
  labels:
    app: model
spec:
  ports:
    - name: rest
      port: 8000
      protocol: TCP
  selector:
    app: model


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: model
  namespace: model
spec:
  host: model
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: model1
      labels:
        version: model1
    - name: model2
      labels:
        version: model2


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model
  namespace: model
spec:
  hosts:
    - model 
  http:
    - route:
        - destination:
            host: model 
            subset: model1
          weight: 60
        - destination:
            host: model
            subset: model2
          weight: 40
